# SI360_Lvio_Fusion

./: README.md  compare.sh  navsat_path.tum  test.sh  train.sh
misc/: my_ddpg.pt  my_ppo.pt  my_td3.pt  ref_td3.pt
saved_path/ddpg/: ddpg_01_path.tum  ddpg_02_path.tum  ddpg_05_path.tum  ddpg_09_path.tum
saved_path/gt/: 01_navsat_path.tum  02_navsat_path.tum  05_navsat_path.tum  09_navsat_path.tum
saved_path/ppo/: ppo_01_path.tum  ppo_02_path.tum  ppo_05_path.tum  ppo_09_path.tum
saved_path/ref/: ref_01_path.tum  ref_02_path.tum  ref_05_path.tum  ref_09_path.tum
saved_path/std3/: std3_01_lambda01_path.tum  std3_01_lambda05_path.tum  std3_01_lambda1_path.tum  std3_02_lambda01_path.tum  std3_02_lambda05_path.tum  std3_02_lambda1_path.tum  std3_05_lambda01_path.tum  std3_05_lambda05_path.tum  std3_05_lambda1_path.tum  std3_09_lambda01_path.tum  std3_09_lambda05_path.tum  std3_09_lambda1_path.tum
src/lvio_fusion/: CMakeLists.txt
src/lvio_fusion/src/: environment.cpp
src/lvio_fusion_node/: CMakeLists.txt
src/lvio_fusion_node/config/: bupt.yaml  euroc.yaml  gazebo.yaml  ict.yaml  kaist28.yaml  kaist39.yaml  kitti.yaml  kitti2.yaml  zed.yaml
src/lvio_fusion_node/launch/: kitti2.launch  kitti_train.launch
src/lvio_fusion_node/src/: CMakeLists.txt  lvio_fusion_node.cpp  path2tum.cpp  visualization.cpp
src/rl_fusion/src/: rl_fusion_node
src/rl_fusion/src/rl_fusion/: rl_models.py  td3.py
